# K8sFramework

./: CMakeLists.txt  K8S.md  README.md  build.sh  push.sh
src/: .gitignore  CMakeLists.txt
src/AdminServer/: CMakeLists.txt  create-openapi.sh  go.mod  go.sum  load.go  main.go
src/AdminServer/doc/: Admin.yaml  TConfig.yaml  TDeploy.yaml  TEndpoint.yaml  TRelease.yaml  TServer.yaml  TWebHook.yaml
src/AdminServer/handler/: configure.go  go.mod  go.sum  restfulServer.go
src/AdminServer/handler/compatible/: global.go  handler.go  watcher.go
src/AdminServer/handler/k8s/: adapter.go  app.go  approval.go  business.go  config.go  default.go  deploy.go  fixed.go  global.go  k8s.go  option.go  pod.go  port.go  release.go  server.go  shell.go  template.go  tree.go  watcher.go
src/AdminServer/handler/mysql/: notify.go  select.go
src/AdminServer/handler/test/: k8s_test.go  sql_test.go
src/AdminServer/handler/util/: util.go
src/AdminServer/handler/websocket/: wsterminal.go
src/AdminServer/k8s.taf.io/crd/: go.mod
src/AdminServer/openapi/: go.mod
src/AdminServer/openapi/models/: app_elem.go  array_map_interface.go  array_string.go  business.go  business_group_elem.go  config_def.go  config_meta.go  count.go  deploy_meta.go  host_port_elem.go  map_byte_array.go  map_int.go  map_interface.go  map_servant.go  map_string.go  node_selector.go  (+10 more)
src/AgentServer/: CMakeLists.txt  agent.go  crontab.go  go.mod  go.sum  main.go  resource.go
src/ConfigServer/: CMakeLists.txt  ConfigImp.cpp  ConfigImp.h  ConfigInfoInterface.cpp  ConfigInfoInterface.h  ConfigServer.cpp  ConfigServer.h  main.cpp
src/ControlServer/: CMakeLists.txt  build.go  equal.go  go.mod  go.sum  main.go  mutating.go  reconcile.go  reconcileDaemonSet.go  reconcileService.go  reconcileStatefulSet.go  reconcileTDeploy.go  reconcileTEndpoint.go  reconcileTExitedRecord.go  reconcileTTree.go  until.go  validating.go  watcher.go  webhook.go
src/ImageServer/: CMakeLists.txt  ImageBuild.go  go.mod  main.go
src/LibK8SClient/: HttpParser.cpp  K8SClient.cpp  K8SClient.h  K8SParams.h  K8SWatcher.cpp
src/NodeServer/: CMakeLists.txt  ContainerDetail.cpp  ContainerDetail.h  Fixed.h  Node.jce  NodeF.jce  NodeImp.cpp  NodeImp.h  NodeServer.cpp  ServerImp.cpp  ServerImp.h  ServerObject.cpp  ServerObject.h  main.cpp  util.h
src/NotifyServer/: LoadDbThread.cpp  LoadDbThread.h  NotifyImp.h
src/RegistryServer/: CMakeLists.txt  HttpParser.h  IOContext.h  K8SClient.cpp  K8SClient.h  K8SListWatchSession.cpp  K8SListWatchSession.h  K8SRuntimeParams.h  NodeDescriptor.jce  QueryF.jce  QueryImp.cpp  QueryImp.h  Registry.jce  RegistryDescriptor.jce  RegistryImp.cpp  RegistryImp.h  RegistryServer.cpp  RegistryServer.h  ServerInfoInterface.cpp  ServerInfoInterface.h  UpChainSession.h  main.cpp
src/cmake/: golang.cmake
src/k8s.tars.io/: README.md  go.mod  go.sum
src/k8s.tars.io/crd/: go.mod  go.sum
src/k8s.tars.io/hack/: go.mod  go.sum  update-codegen.sh
(+844 files in other folders)
